--- a/templates/result.html
+++ b/templates/result.html
@@ -6,9 +6,9 @@
 <body>
     <h1>Account Info</h1>
     {% if user_info %}
-    <p>Username: {{ user_info.username }}</p>
+    <p>Username: {{ user_info.name }}</p>
     <p>First Name: {{ user_info['first-name'] }}</p>
-    <p>Last Name: {{ user_info['last-name'] }}</p>
+    <p>Last Shared User: {{ user_info['shared-user'] }}</p>
     <p>Email: {{ user_info.email }}</p>
     {% else %}
     <p>{{ error }}</p>
